--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 */
 
-/*Global Styles*/
+/*=== Global Styles ===*/
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
@@ -18,14 +18,22 @@ body {
 header {
     background-color: #333333;
     padding: 20px;
+    margin-top: 20px;
+    margin-left: 15px;
+    margin-right: 15px;
     text-align: center;
+    border-radius: 15px;
 }
 
-/*Always assigned*/
+/*=== Always assigned ===*/
 
 h1 {
     color: #ffffff;
 }
 
-/*Can be assigned*/
+/*=== Classes ===*/
 
+.join-content {
+    margin-left: 700px;
+    font-size: 25px;
+}
