--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
    ____ ____  ____  
  / ___/ ___|/ ___| 
 | |   \___ \\___ \ 
-| |___ ___) |___)|
+| |___ ___| |___||
 \____|____/|____/
 
 */
@@ -34,7 +34,7 @@ h1 {
 /*=== Classes ===*/
 
 .join-content {
-    margin-left: 700px;
+    text-align: end;
     font-size: 25px;
 }
 
