--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 */
 
-/*=== Global Styles ===*/
+/*=== Global Settings ===*/
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
@@ -25,9 +25,27 @@ header {
     border-radius: 15px;
 }
 
+footer {
+    position: fixed;
+    background-color: #333333;
+    left: 0;
+    bottom: 0;
+    margin-right: 15px;
+    margin-left: 15px;
+    margin-bottom: 20px;
+    width: calc(100% - 30px);
+    color: white;
+    text-align: center;
+    border-radius: 15px;
+}
+
 /*=== Always assigned ===*/
 
 h1 {
+    color: #ffffff;
+}
+
+p {
     color: #ffffff;
 }
 
@@ -35,9 +53,16 @@ h1 {
 
 .join-content {
     text-align: end;
-    font-size: 25px;
+    font-size: 15px;
 }
 
 .text-center {
     text-align: center;
+}
+
+.title-left-bottom {
+    position: absolute;
+    font-size: 35px;
+    bottom: 110px;
+    left: 120px;
 }
